BBS defrag puzzle with bad sector exploit hacking minigame

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -68,6 +68,8 @@ Connected at 1200 baud!
 │ ░░░░░░▒░░░░░░░░░░▒▒▒▒░░░░░░░░░░░░░░░░░░▒▒▒▒░ │
 │ ░░░░▓▓░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▓░░░░░░░░ │
 │ ░░░░░░░░░░░░░░░░░░░▓░░░░░░░░░▒▒▒░░░░░░░░░░░░ │
+├──────────────────────────────────────────────┤
+│ Warning: 76.27% fragmented - 255 bad sectors │
 └──────────────────────────────────────────────┘
 </pre>
 
@@ -84,13 +86,47 @@ Connected at 1200 baud!
 │ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
 │ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
 │ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │
+├──────────────────────────────────────────────┤
+│ 3 bad sectors found in hidden file SYSOP.EXE │
 └──────────────────────────────────────────────┘
 </pre>
     
-<pre id='CLS'>
-<pre>
+<pre id='SYSOP'>
+Corrupt checksum in file SYSOP.EXE detected.
+Warning, data asset A:/%%LOGINPWD may have
+incomplete security protocols.
 
-</pre><pre id='DIR'>
+Abort, Retry, Ignore?
+</pre>
+
+<pre id='ABORT'>
+</pre>
+
+<pre id='RETRY'>
+Corrupt checksum in file SYSOP.EXE detected.
+Warning, data asset A:/%%LOGINPWD may have
+incomplete security protocols.
+
+Abort, Retry, Ignore?    
+</pre>
+
+<pre id='IGNORE'>
+BACKLASH FiLE_ID by ROY/SAC            [01/01]
+(c)1996 Superior Art Creations
+▀▀▀▀█▄▀▀▀▀█▄▀▀▀▀██ ▓█ ██ ▓█ ▀▀▀▀█▄ ▄█▀██▀▀▀ ▄█
+:▓█▄█▀ ▓█ ██ ▓█ ▀  ██▄█▀ ██  ▓█ ██ ▀█▄▄  ▓█▄██
+|██ █▓ ██▀██ ██ ▄  ██ ██ ██  ██▀██ ▄▄ ██ ██ ██
+│██▄█▀ ██ █▓ ▀█▄██ ██ █▓ ▀█▄▄▄▄ █▓ ▓█▄█▀ ██ █▓
+└────[ Release Date: 06/24/1996 ]─────roy────»
+Decrypting BBS.pwd.db 0%.......50%........100%
+Saving plaintext database backup file DB01.TXT
+(warning: security code 2F triggered)
+</pre>
+
+<pre id='CLS'>
+</pre>
+
+<pre id='DIR'>
 Volume in drive A is TOPSCRET
 Volume Serial Number is 9A3E-085C
 
@@ -98,8 +134,9 @@ Directory of A:
 
 1998-05-31  10:29 AM &ltDIR&gt; .
 1998-05-31  10:29 AM &ltDIR&gt; ..
-1998-01-29  01:52 PM 1,024 DIR.EXE
 1998-01-29  01:52 PM 1,024 BBS.EXE
+1998-01-28  01:52 PM 1,024 DEFRAG.EXE
+1998-01-01  01:52 PM 1,024 DIR.EXE
             1 File(s)  4,096 bytes
             2 Dir(s) 230,944 bytes free
 </pre>
